feat: Member assignment to Projects

--- a/ProMgt.Client/Components/ProjectTitleBarLayout/AddTaskBar.razor
+++ b/ProMgt.Client/Components/ProjectTitleBarLayout/AddTaskBar.razor
@@ -25,9 +25,11 @@
 @code {
     [Parameter]
     public int ProjectId { get; set; }
+    public List<UserResponse> users { get; set; } = new();
     public async Task AddTaskHandler()
     {
         ProjectService.CreateNewTask(ProjectId);
         await Task.CompletedTask;
-    }
+    }      
+   
 }
