--- a/ProMgt.Client/_Imports.razor
+++ b/ProMgt.Client/_Imports.razor
@@ -17,10 +17,6 @@
 @using ProMgt.Client.Infrastructure.Settings
 @using FluentValidation
 @using Microsoft.AspNetCore.Authorization
-@using ProMgt.Client.Components
-@using ProMgt.Client.Components.Dialogs
-@using ProMgt.Client.Components.Task
-@using ProMgt.Client.Components.Field
 @using ProMgt.Client.Models
 @using ProMgt.Client.Models.AuthModels
 @using ProMgt.Client.Models.Project
@@ -29,7 +25,11 @@
 @using ProMgt.Client.Models.Fields.Priority
 @using ProMgt.Client.Models.Fields.TaskStatus
 @using ProMgt.Client.Models.Section
+@using ProMgt.Client.Models.User
 @using ProMgt.Client.Components.Task.TaskStatistics
 @using ProMgt.Client.Components.Skeleton
-
-
+@using ProMgt.Client.Components
+@using ProMgt.Client.Components.Dialogs
+@using ProMgt.Client.Components.Task
+@using ProMgt.Client.Components.Field
+@using ProMgt.Client.Components.Contact
